# peglab

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md
backend/: README.md  pyproject.toml
backend/app/: deps.py  main.py  schemas.py
backend/app/routes/: compare.py  designs.py  scenarios.py  simulate.py
backend/tests/: test_routes.py
docs/: adding_a_collateral_model.md  adding_a_scenario.md  assumptions_and_limitations.md
engine/: README.md  pyproject.toml
engine/peglab_engine/: __init__.py  assumptions.py  engine.py  metrics.py  types.py
engine/peglab_engine/models/: __init__.py  base.py  crypto_backed.py  fiat_backed.py  overcollateralized.py
engine/peglab_engine/scenarios/: __init__.py  bank_run.py  base.py  black_swan.py  bridge_failure.py  collateral_crash.py  governance_failure.py  interest_rate_spike.py  liquidity_crunch.py  liquidity_mining_ends.py  oracle_failure.py  whale_redemption.py
engine/tests/: test_engine.py  test_metrics.py  test_models.py  test_scenarios.py
examples/: makerdao_style_config.json  run_example.py  usdc_style_config.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AssumptionsBanner.tsx  CollateralSelector.tsx  CompareTable.tsx  MetricsCard.tsx  ParameterPanel.tsx  ScenarioPicker.tsx
frontend/src/components/charts/: chartUtils.ts  (+4 more)
frontend/src/context/: AppContext.tsx
frontend/src/lib/: api.ts  storage.ts
frontend/src/pages/: ComparePage.tsx  DesignPage.tsx  ResultsPage.tsx  StressTestPage.tsx
