[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peglab-backend"
version = "0.1.0"
description = "FastAPI wrapper for the PegLab simulation engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
